[CSL-2072] Standardize the pure verification framework

--- a/util/cardano-sl-util.cabal
+++ b/util/cardano-sl-util.cabal
@@ -39,6 +39,7 @@ library
                        Pos.Util.Some
                        Pos.Util.Timer
                        Pos.Util.Util
+                       Pos.Util.Verification
 
   other-modules:
 
