[CSL-2264] Banish exception instance for 'ToilVerFailure'
Initially it wasn't intended to be thrown as a runtime exception.
It's convenient to use 'ExceptT ToilVerFailure' in txp verification and
banishing this instance allows us to do it.

--- a/client/cardano-sl-client.cabal
+++ b/client/cardano-sl-client.cabal
@@ -44,6 +44,7 @@ library
                      , log-warper
                      , monad-control
                      , mtl
+                     , safe-exceptions
                      , serokell-util
                      , stm
                      , text-format
